--- a/src/partials/api-rusin/weather.html
+++ b/src/partials/api-rusin/weather.html
@@ -21,7 +21,7 @@
         <button class="form-button">Search</button>
       </select>
     </form>
-    <ul class="js-list"></ul>
+    <ul class="list-weather js-list"></ul>
 
     <script src="../../js/api-rusin/weather-api.js" type="module"></script>
   </body>
